...
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginStart="106dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="66dp"
        app:layout_constraintBottom_toTopOf="@+id/txtLoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
...
